crates/loom/tests/snapshots/cli_help__loom_note_rm_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"note\", \"rm\"])"
---
Remove a single note by id

Usage: loom note rm [OPTIONS] <ID>

Arguments:
  <ID>  Note id

Options:
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
      --host-key          Explicitly allow ambient host Git credentials and signing config
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi, direct]
  -h, --help              Print help
