crates/loom/tests/snapshots/cli_help__loom_run_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"run\"])"
---
Per-bead execution loop. Continuous by default; `--once` exits after one bead

Usage: loom run [OPTIONS]

Options:
      --once                 Process a single bead then exit (no auto-handoff to `loom gate verify` / `loom gate review`)
  -w, --workspace <PATH>     Workspace root. Defaults to the current working directory
  -A, --agent <BACKEND>      Override the agent backend for this invocation [possible values: claude, pi]
  -p, --parallel <PARALLEL>  Concurrent dispatch slots (`-p N` / `--parallel N`). Default 1 [default: 1]
      --profile <PROFILE>    Override the per-bead `profile:X` label resolution
  -s, --spec <LABEL>         Spec label override (defaults to `current_spec`)
      --plain                ASCII output, no color, no OSC 8. Pipe-safe. Implied when stdout is not a TTY or `NO_COLOR` is set. Mutually exclusive with `--json` and `--raw`
      --json                 Emit one pretty-printed JSON object per line on stdout. Mutually exclusive with `--plain` and `--raw`
      --raw                  Emit one compact JSON line per event on stdout — same as the on-disk JSONL shape. Mutually exclusive with `--plain`, `--json`, and `-v/--verbose`
  -v, --verbose              Widen the rendered text: streams `TextDelta` verbatim and renders each `ToolResult` body capped at 10 lines with a recovery hint. Mutually exclusive with `--raw`
  -h, --help                 Print help
