crates/loom/tests/snapshots/cli_help__loom_spec_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"spec\"])"
---
Inspect annotations and tooling dependencies for a spec

Usage: loom spec [OPTIONS] <LABEL>

Arguments:
  <LABEL>  Spec label to inspect

Options:
      --deps              Print the unique nixpkgs names referenced by spec annotation targets
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi, direct]
      --targets           Print annotation tiers and targets, one per line
      --tier <TIER>       Restrict target output to one annotation tier [possible values: check, test, system, judge]
      --plain             Print exact annotation targets without tier prefixes
  -h, --help              Print help
