crates/loom/tests/snapshots/cli_help__loom_status_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
assertion_line: 124
expression: "loom_help(&[\"status\"])"
---
Print cache health and work-epic status

Usage: loom status [OPTIONS]

Options:
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi, direct]
  -h, --help              Print help
