crates/loom/tests/snapshots/cli_help__loom_todo_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"todo\"])"
---
Decompose the deterministic changed specs into the todo work epic

Usage: loom todo [OPTIONS]

Options:
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi, direct]
  -h, --help              Print help
